[package]
name = "rt-format"
version = "0.1.2"
authors = ["Vojislav Stojkovic <zinthys@gmail.com>"]
edition = "2018"

description = "Fully-runtime equivalent of the format! macro"
readme = "README.md"
license = "Apache-2.0"
keywords = ["format", "fmt", "runtime", "string", "formatting"]

repository = "https://github.com/vstojkovic/rt-format"

[dependencies]
lazy_static = "1"
regex = "1"
